--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </strong>
     </h2>
     <figure class="w3-display-container">
-        <img oncontextmenu="false" src="./assets/pond-helsinki-mobile.webp" alt="Book's cover" width="300" height="300" srcset="./assets/pond-helsinki-mobile.webp 540w, ./assets/pond-helsinki.webp 1080w">
+        <img oncontextmenu="false" src="./assets/pond-helsinki-mobile.webp" alt="Book's cover" width="300" height="300">
         <figcaption class="w3-display-bottomright w3-tag">
         Helsinki, 09/2019
         </figcaption>
@@ -84,7 +84,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </strong>
     </h2>
     <figure class="w3-display-container">
-        <img oncontextmenu="false" src="./assets/leaf-mobile.webp" alt="Book's cover" width="300" height="300" srcset="./assets/leaf-mobile.webp 540w, ./assets/leaf.webp 1080w">
+        <img oncontextmenu="false" src="./assets/leaf-mobile.webp" alt="Book's cover" width="300" height="300">
         <figcaption class="w3-display-bottomright w3-tag">
         Turku, 09/2019
         </figcaption>
@@ -113,7 +113,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </strong>
     </h2>
     <figure class="w3-display-container">
-        <img oncontextmenu="false" src="./assets/A540px.webp" alt="Book's cover" width="300" height="300" srcset="./assets/A540px.webp 540w, ./assets/A.webp 1080w">
+        <img oncontextmenu="false" src="./assets/A540px.webp" alt="Book's cover" width="300" height="300">
         <figcaption class="w3-display-bottomright w3-tag">
         Auringonkukka, Uusikaupunki, 09/2020
         </figcaption>
