--- a/index.html
+++ b/index.html
@@ -1,52 +1,44 @@
 <!DOCTYPE html>
 <html lang="fi">
+  <head>
+    <title>Elisan blogi</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <title>Elisan blogi</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel=" stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 
-  <link rel=" stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" media="all" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap"
-    rel="stylesheet prefetch" />
-  <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'" />
+    <link
+      rel="stylesheet"
+      href="style.css"
+      media="print"
+      onload="this.media='all'"
+    />
 
-  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-  <meta name="description" property="og:description" content="Täältä voit lukea Elisan kirjoituksia" />
-  <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
-  <meta name="author" content="Elisa Stenberg" />
-  <meta name="image" property="og:image" content="assets/background/annie.webp" />
-  <style>
-    body {
-      font-family: "Montserrat", sans-serif;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-color: black;
-    }
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Täältä voit lukea Elisan kirjoituksia"
+    />
+    <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
+    <meta name="author" content="Elisa Stenberg" />
+    <meta
+      name="image"
+      property="og:image"
+      content="assets/annie.webp"
+    />
+  </head>
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5 {
-      font-family: "Raleway", sans-serif;
-    }
-  </style>
-</head>
-
-<body>
-  <header class="w3-container w3-center w3-padding-32 w3-text-white">
-    <h1><strong>Elisan Antologia</strong></h1>
-    <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
-  </header>
-  <main class="w3-row">
-    <!-- Blog entries -->
-    <section class="w3-col l8 s12">
-      <!-- Blog entry -->
-      <script id="template" type="text/x-handlebars-template">
+  <body>
+    <header class="w3-container w3-center w3-padding-32 w3-text-white">
+      <h1><strong>Elisan Antologia</strong></h1>
+      <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
+    </header>
+    <main class="w3-row">
+      <!-- Blog entries -->
+      <section class="w3-col l8 s12">
+        <!-- Blog entry -->
+        <script id="template" type="text/x-handlebars-template">
           {{#each writings}}
             {{#if @last}}
               <article class="w3-card-4 w3-margin w3-sand w3-round">
@@ -56,14 +48,14 @@
                   </strong>
                 </h2>
                 <figure class="w3-display-container">
-                    <img
-                      oncontextmenu="false"
-                      src="{{imgSrc}}"
-                      alt="Book's cover"
-                      width="300"
-                      height="300"
-                      srcset="{{imgSrc}}, {{imageSmall}} 500w"
-                    />
+                  <img
+                    oncontextmenu="false"
+                    src="{{imgSrc}}"
+                    alt="Book's cover"
+                    width="300"
+                    height="300"
+                    srcset="{{imgSrc}}, {{imageSmall}} 500w"
+                  />
                   <figcaption class="w3-display-bottomright w3-tag">
                     {{imageComment}}
                   </figcaption>
@@ -94,49 +86,57 @@
             {{/if}}
           {{/each}}
         </script>
-      <!-- END BLOG ENTRIES -->
-    </section>
-    <!-- Introduction menu -->
-    <section class="w3-col l4">
-      <!-- About Card -->
-      <div class="w3-card w3-margin w3-margin-top w3-sand">
-          <img class="w3-circle w3-margin" id="profilePhoto" src="https://ik.imagekit.io/panugr/elisa/profilePhoto"
-          alt="Elisa Stenberg, profile photo" width="100" height="250" oncontextmenu="false" loading="lazy" />
-        <div class="w3-container w3-sand">
-          <h4><strong>Elisa Stenberg</strong></h4>
-          <p>
-            Tervetuloa lukemaan tekstejäni! <br />
-            Olen Elisa Stenberg ja olen opiskellut luovaa kirjoittamista
-            Jamilahden kansanopistossa sekä Kauniaisissa Työväen Akatemiassa.
-            Olen kirjoittanut myös näytelmän
-            <em>"Minä ja Hugo Simberg"</em> , jonka on esittänyt Haminan Hywät
-            Wanhat asukkaat keväällä 2013. Lisäsksi tekstejäni on ollut
-            muutamassa lehdessä. Toivottavasti viihdyt tekstejeni parissa!
-          </p>
-          <p>
-            Welcome! <br />
-            I'm Elisa Stenberg and I have studied creative writing in
-            Jamilahti folk-high school as well as in the Työväen Academy of
-            Kauniainen. I have also written the play
-            <em> "Me and Hugo Simberg"</em>, which was presented in Hamina
-            Hywät Wanhat asukkaat in the spring of 2013. Furthermore, my texts
-            have been in a few magazines. I hope you enjoy my writings!
-          </p>
+        <!-- END BLOG ENTRIES -->
+      </section>
+      <!-- Introduction menu -->
+      <section class="w3-col l4">
+        <!-- About Card -->
+        <div class="w3-card w3-margin w3-margin-top w3-sand">
+          <img
+            class="w3-circle w3-margin"
+            id="profilePhoto"
+            src="https://ik.imagekit.io/panugr/elisa/profilePhoto"
+            alt="Elisa Stenberg, profile photo"
+            width="100"
+            height="250"
+            oncontextmenu="false"
+            loading="lazy"
+          />
+          <div class="w3-container w3-sand">
+            <h4><strong>Elisa Stenberg</strong></h4>
+            <p>
+              Tervetuloa lukemaan tekstejäni! <br />
+              Olen Elisa Stenberg ja olen opiskellut luovaa kirjoittamista
+              Jamilahden kansanopistossa sekä Kauniaisissa Työväen Akatemiassa.
+              Olen kirjoittanut myös näytelmän
+              <em>"Minä ja Hugo Simberg"</em> , jonka on esittänyt Haminan Hywät
+              Wanhat asukkaat keväällä 2013. Lisäsksi tekstejäni on ollut
+              muutamassa lehdessä. Toivottavasti viihdyt tekstejeni parissa!
+            </p>
+            <p>
+              Welcome! <br />
+              I'm Elisa Stenberg and I have studied creative writing in
+              Jamilahti folk-high school as well as in the Työväen Academy of
+              Kauniainen. I have also written the play
+              <em> "Me and Hugo Simberg"</em>, which was presented in Hamina
+              Hywät Wanhat asukkaat in the spring of 2013. Furthermore, my texts
+              have been in a few magazines. I hope you enjoy my writings!
+            </p>
+          </div>
         </div>
-      </div>
-      <hr />
-      <!-- Posts -->
-      <div class="w3-card w3-margin w3-sand">
-        <div class="w3-container w3-padding">
-          <h4>Kirjoituksia</h4>
-        </div>
-        <ul class="w3-ul w3-hoverable">
-          <script id="template2" type="text/x-handlebars-template">
+        <hr />
+        <!-- Posts -->
+        <div class="w3-card w3-margin w3-sand">
+          <div class="w3-container w3-padding">
+            <h4>Kirjoituksia</h4>
+          </div>
+          <ul class="w3-ul w3-hoverable">
+            <script id="template2" type="text/x-handlebars-template">
               {{#each writings}}
                 <li class="w3-padding-16">
                   <a href="articles.html?id={{@index}}">
-                      <img
-                      src="{{thumbnail}}"
+                    <img
+                      src="{{imageSmall}}"
                       alt="Book's cover"
                       class="w3-left w3-margin-right w3-image"
                       loading="lazy"
@@ -152,33 +152,35 @@
                 </li>
               {{/each}}
             </script>
-        </ul>
+          </ul>
+        </div>
+        <hr />
+        <!-- END Introduction Menu -->
+      </section>
+    </main>
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+        <a class="a2a_button_facebook"></a>
+        <a class="a2a_button_facebook_messenger"></a>
+        <a class="a2a_button_whatsapp"></a>
+        <a class="a2a_button_linkedin"></a>
+        <a class="a2a_button_copy_link"></a>
       </div>
-      <hr />
-      <!-- END Introduction Menu -->
-    </section>
-  </main>
-  <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-      <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-      <a class="a2a_button_facebook"></a>
-      <a class="a2a_button_facebook_messenger"></a>
-      <a class="a2a_button_whatsapp"></a>
-      <a class="a2a_button_linkedin"></a>
-      <a class="a2a_button_copy_link"></a>
-    </div>
-    <a
+      <a
         href="https://panagiotis.netlify.app"
         target="blank"
         noreferrer
         class="w3-block w3-small w3-center"
         >by Panagiotis, Front-End developer</a
       >
-  </footer>
-  <script async src="https://static.addtoany.com/menu/page.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
-  <script defer src="assets/articles.js"></script>
-  <script defer src="main.js"></script>
-</body>
-
+    </footer>
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"
+    ></script>
+    <script defer src="assets/articles.js"></script>
+    <script defer src="main.js"></script>
+  </body>
 </html>
