--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <img
             class="w3-circle w3-margin"
             id="profilePhoto"
-            src="https://ik.imagekit.io/panugr/elisa/profilePhoto"
+            src="/assets/profilePhoto.webp"
             alt="Elisa Stenberg, profile photo"
             width="100"
             height="250"
