--- a/index.html
+++ b/index.html
@@ -2,36 +2,34 @@
 <html lang="fi">
 
 <head>
-  <title>Elisan blogi</title>
+  <title>Elisa Panagiotakopoulos</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="preconnect" href="https://fonts.bunny.net">
+  <link href="https://fonts.bunny.net/css?family=amatic-sc:700" rel="stylesheet">
   <link rel=" stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-  <meta name="description" property="og:description" content="Täältä voit lukea Elisan kirjoituksia">
-  <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi">
-  <meta name="author" content="Elisa Stenberg">
-  <meta name="image" property="og:image" content="assets/annie.webp">
+  <meta name="keywords" content="Elisa Stenberg, Elisa Panagiotakopoulos kirjoituksia, blogi">
+  <meta name="author" content="Elisa Stenberg-Panagiotakopoulos">
+  <meta name="image" property="og:image" content="assets/background.webp">
 </head>
 
 <body>
   <header class="w3-container w3-center w3-padding-32 w3-text-white">
     <h1><strong>Elisa Panagiotakopoulos</strong></h1>
   </header>
-  <main class="w3-row">
+  <main>
 
-    <section class="w3-col l8">
+    <section>
       <!-- About Card -->
-      <div class="w3-card w3-margin w3-margin-top w3-sand">
-        <img class="w3-image w3-circle w3-margin" id="profilePhoto"
+      <div class="w3-card w3-margin w3-margin-top w3-sand w3-center w3-padding-16">
+        <img class="w3-image w3-circle w3-margin w3-padding-16" id="profilePhoto"
           src="https://scontent-hel3-1.xx.fbcdn.net/v/t39.30808-6/230227640_10159883360539101_7052166329045661107_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=be3454&_nc_ohc=PYV-HpL2pGYAX9WOKgC&_nc_ht=scontent-hel3-1.xx&oh=00_AfBkEJqIf2oZ-UGhJ-KZNMivnghmyAvLPC2okhM6CQiTxg&oe=64DCDF02"
           alt="Elisa Panagiotakopoulos, profile photo" width="200" height="200" oncontextmenu="false">
         <div class="w3-container w3-sand">
           <p>
-            Tervetuloa lukemaan tekstejäni! <br>
+            Hei! <br>
             Olen Elisa Panagiotakopoulos ja olen opiskellut luovaa kirjoittamista
             Jamilahden kansanopistossa sekä Kauniaisissa Työväen Akatemiassa.
             Olen kirjoittanut myös näytelmän
@@ -39,6 +37,7 @@
             Wanhat asukkaat keväällä 2013. Lisäsksi tekstejäni on ollut
             muutamassa lehdessä. Toivottavasti viihdyt tekstejeni parissa!
           </p>
+          <br>
           <p>
             Welcome! <br>
             I'm Elisa Panagiotakopoulos and I have studied creative writing in Jamilahti
@@ -52,50 +51,49 @@
       </div>
 
     </section>
-    <section class="w3-col l4">
+    <section>
       <!-- Blog entry -->
       <div class="w3-card w3-margin w3-sand">
-        <div class="w3-container w3-padding">
-          <h4>Kirjoituksia</h4>
-        </div>
         <ul class="w3-ul">
-          <script id="template2" type="text/x-handlebars-template">
-              {{#each writings}}
-                <li class="w3-padding-16">
-                  <img
-                    src="{{imageSmall}}"
-                    alt="Book's cover"
-                    class="w3-image"
-                    loading="lazy"
-                    width="100"
-                    height="250"
-                    oncontextmenu="false"
-                  />
-                  <h3 class="w3-large">
-                    {{title}}
-                  </h3>
-                  <!-- <p class="w3-inline">{{date}} </p> -->
-                </li>
-              {{/each}}
-            </script>
+          <li class="w3-padding-16">
+            <img src="./assets/kukkia.webp" alt="Book's cover" class="w3-image" width="1200" height="1600"
+              oncontextmenu="false">
+          </li>
+          <li class="w3-padding-16">
+            <img src="./assets/statue1.webp" alt="Book's cover" class="w3-image" width="1200" height="1600"
+              oncontextmenu="false">
+          </li>
+          <li class="w3-padding-16">
+            <img src="./assets/statue2.webp" alt="Book's cover" class="w3-image" width="1200" height="1600"
+              oncontextmenu="false">
+          </li>
+        </ul>
+      </div>
+      <hr>
+      <div class="w3-card w3-margin w3-sand">
+        <ul class="w3-ul">
+          <li class="w3-padding-16">
+            <img src="./assets/hugo.webp" alt="Book's cover" class="w3-image" width="1000" height="1600"
+              oncontextmenu="false">
+          </li>
         </ul>
       </div>
       <hr>
     </section>
   </main>
-  <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top w3-center">
+  <footer class="w3-container w3-dark-grey w3-padding-32  w3-center">
     <h3>Follow Me</h3>
     <div class="w3-bar">
-      <a href="https://www.facebook.com/elisa.stenberg" aria-label="link to my social media" class="w3-bar-item w3-button w3-hover-opacity"><svg
-          xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook"
-          viewBox="0 0 16 16">
+      <a href="https://www.facebook.com/elisa.stenberg" aria-label="link to my social media"
+        class="w3-bar-item w3-button w3-hover-opacity"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+          fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
           <path
             d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
         </svg></a>
 
-      <a href="https://www.instagram.com/elisa.panagiotakopoulos/" aria-label="link to my social media" class="w3-bar-item w3-button w3-hover-opacity"><svg
-          xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
-          viewBox="0 0 16 16">
+      <a href="https://www.instagram.com/elisa.panagiotakopoulos/" aria-label="link to my social media"
+        class="w3-bar-item w3-button w3-hover-opacity"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+          fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
           <path
             d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
         </svg></a>
