--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Olen kirjoittanut myös näytelmän
             <em>"Minä ja Hugo Simberg"</em> , jonka on esittänyt Haminan Hywät
             Wanhat asukkaat keväällä 2013. Lisäsksi tekstejäni on ollut
-            muutamassa lehdessä. Toivottavasti viihdyt tekstejeni parissa!
+            muutamassa lehdessä.
           </p>
           <br>
           <p>
@@ -45,7 +45,7 @@
             have also written the play
             <em> "Me and Hugo Simberg"</em>, which was presented in Hamina Hywät
             Wanhat asukkaat in the spring of 2013. Furthermore, my texts have
-            been in a few magazines. I hope you enjoy my writings!
+            been in a few magazines.
           </p>
         </div>
       </div>
