mina&hugo picture

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             <img src="./assets/hugo.webp" alt="Book's cover" class="w3-image" width="1000" height="1600"
               oncontextmenu="false">
           </li>
+          <li class="w3-padding-16">
+            <img src="./assets/mina&hugo.webp" alt="Book's cover" class="w3-image" width="526" height="789"
+              oncontextmenu="false">
+          </li>
         </ul>
       </div>
       <hr>
