--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <header class="w3-container w3-center w3-padding-32 w3-text-white">
     <h1><strong>Elisa Panagiotakopoulos</strong></h1>
+    <span>os. Stenberg</span>
   </header>
   <main>
 
@@ -67,6 +68,13 @@
             <img src="./assets/statue2.webp" alt="Book's cover" class="w3-image" width="1200" height="1600"
               oncontextmenu="false">
           </li>
+          <li class="w3-padding-16">
+            <img src="./assets/mina&hugo.webp" alt="Book's cover" class="w3-image" width="526" height="789" oncontextmenu="false">
+          </li>
+          <li class="w3-padding-16">
+            <a href="https://issuu.com/tsny/docs/nivelposti_1_18_verkkoon" target="_blank" class="w3-block w3-padding">https://issuu.com/tsny/docs/nivelposti_1_18_verkkoon</a>
+            <img src="./assets/lehti.webp" alt="Book's cover" class="w3-image" width="526" height="789" oncontextmenu="false">
+          </li>
         </ul>
       </div>
       <hr>
@@ -74,10 +82,6 @@
         <ul class="w3-ul">
           <li class="w3-padding-16">
             <img src="./assets/hugo.webp" alt="Book's cover" class="w3-image" width="1000" height="1600"
-              oncontextmenu="false">
-          </li>
-          <li class="w3-padding-16">
-            <img src="./assets/mina&hugo.webp" alt="Book's cover" class="w3-image" width="526" height="789"
               oncontextmenu="false">
           </li>
         </ul>
